# BoxFusion

./: .gitignore  convert_boxes.py  demo.py  environment.yml  main.py  main_joint.py  manual_boxes.py  ros_demo.py
BoxFusion/: package.xml  ros_demo.py  setup.cfg  setup.py
BoxFusion/config/: config.rviz  realsense_rviz.rviz
BoxFusion/launch/: boxfusion.launch.py
boxfusion/: box_fusion.py  box_manager.py  capture_stream.py  preprocessor.py
boxfusion.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
config/: ca1m.yaml  online.yaml
data/: panoptic_categories_nomerge.txt
tests/: check_a_box.py  open3d_test.py  read_results.py  sam.py
tools/: utils.py
~/c_space_stl_results/test2/: box_0_lipstick.pkl  box_0_storage box.pkl  box_1_floor.pkl  box_1_lipstick.pkl  box_2_floor.pkl  box_2_storage_box.pkl  boxes.pkl
