<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>BoxFusion</name>
  <version>0.0.0</version>
  <description>Verification of Space Robotics in Underwater Environments</description>
  <maintainer email="jorisv@kth.se">Joris Verhagen</maintainer>
  <license>BSD-3</license>

  <exec_depend>launch</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
